--- a/css/headFoot.css
+++ b/css/headFoot.css
@@ -85,3 +85,9 @@ footer p { margin-top: 10px; color: #222; }
 .sHover { visibility: hidden; }
 .sHover_f { border: none; background: var(--color-main); filter: blur(3px); transform: scale(1.3); opacity: .2; }
 .cHover_f { border: none; background: var(--color-sub); filter: blur(3px); transform: scale(1.3); opacity: .2; }
+
+
+/* ------------------- 검색결과 X --------------------------*/
+.noneResult { display: flex; flex-direction: column; justify-content: center; align-items: center; margin: 80px auto 0 auto; width: 30%; height: 250px; background: #e5e5e5; border-radius: 30px; opacity: .5; }
+.noneResult img { width: 60px; }
+.noneResult p { margin-top: 20px; font-size: 16px; } 
