--- a/css/sPosting.css
+++ b/css/sPosting.css
@@ -107,3 +107,4 @@ input[name="price"]::-webkit-inner-spin-button {appearance: none;}
 .submitBtn { display: block; margin: 30px auto 50px auto; width: 20%; padding: 15px 0; background: #e8e8e8; border-radius: 10px; font-size: 17px; font-family: pSemi; transition: all .2s; cursor: pointer; } 
 .submitBtn:hover { background: #ffd4389f; } 
 
+#charCount { display: inline-block; margin: 10px 0 0 10px; font-size: 13px; font-family: pMedium; color: #999;}
