--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,20 @@
 /* ------------------ mainBanner ---------------------*/
 .mainBanner { display: flex; align-items: center; justify-content: center; position: relative; height: 95vh; background: url(../source/mainBn.png) center center fixed; background-size: cover; } 
 .mainCon { display: flex; flex-direction: column; align-items: center; } 
-.mainBnLogo { width: 550px; filter: drop-shadow(3px 3px 4px #00000052);} 
-.mainCon p { width: 660px; text-align: center; color: #fff; font-size: 20px; font-family: pRegular; line-height: 140%; text-shadow: 1px 1px 4px #000000b2;} 
-.mainCon .boldTxt { font-family: pSemi;}
+.mainBnLogo { width: 550px; filter: drop-shadow(3px 3px 4px #00000052); } 
+.mainCon p { width: 660px; text-align: center; color: #fff; font-size: 20px; font-family: pRegular; line-height: 140%; text-shadow: 1px 1px 4px #000000b2; } 
+.mainCon .boldTxt { font-family: pSemi; } 
 
 .scrollDown { position: absolute; left: 50%; bottom: 5%; padding-top: calc( 100vw * 70 / 1920 ); color: #666; font-size: calc( 100vw * 16 / 1920 ); font-family: pRegular; cursor: pointer; } 
 .scrollDown span { position: absolute; top: 0; left: 50%; width: calc( 100vw * 24 / 1920 ); height: calc( 100vw * 24 / 1920 ); margin-left: calc( 100vw * -12 / 1920 ); border-left: calc( 100vw * 2 / 1920 ) solid #666; border-bottom: calc( 100vw * 2 / 1920 ) solid #666; transform: rotate(-45deg); animation: sdb05 1.5s infinite; } 
 
-@-webkit-keyframes sdb05 {0% { -webkit-transform: rotate(-45deg) translate(0, 0); opacity: 0; } 
+@-webkit-keyframes sdb05 { 
+ 0% { -webkit-transform: rotate(-45deg) translate(0, 0); opacity: 0; } 
 50% { opacity: 1; } 
 100% { -webkit-transform: rotate(-45deg) translate(-20px, 20px); opacity: 0; } 
  }
-@keyframes sdb05 {0% { transform: rotate(-45deg) translate(0, 0); opacity: 0; } 
+@keyframes sdb05 { 
+ 0% { transform: rotate(-45deg) translate(0, 0); opacity: 0; } 
 50% { opacity: 1; } 
 100% { transform: rotate(-45deg) translate(-20px, 20px); opacity: 0; } 
  }
@@ -35,14 +37,14 @@
 
 /* ------------------------------------------------------ */
 .itemAll { margin: 20px auto; padding-bottom: 30px; display: flex; border-bottom: 1px solid #ddd; } 
-.itemOne { width: calc(100vw * 330 / 1920); height: 335px; margin: calc(100vw * 20 / 1920) calc(100vw * 42 / 1920) calc(100vw * 20 / 1920) 0; position: relative;border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; cursor: pointer; } 
+.itemOne { width: calc(100vw * 330 / 1920); height: 335px; margin: calc(100vw * 20 / 1920) calc(100vw * 42 / 1920) calc(100vw * 20 / 1920) 0; position: relative; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; cursor: pointer; } 
 .itemOne .post { width: 100%; height: 210px; border-radius: 15px 15px 0 0; overflow: hidden; } 
 .postImg { width: calc(100vw * 360 / 1920); height: 100%; border-radius: 15px 15px 0 0; overflow: hidden; display: flex; align-items: center; position: relative; } 
 .postImg img { width: 100%; height: 100%; object-fit: cover; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); transition: transform 0.3s; } 
 .itemOne:hover .post img { transform: translate(-50%, -50%) scale(1.05); /* 추가: 호버 시 이미지 크기를 110%로 확대 */ } 
 
 .postBottom { width: 93%; height: 90px; display: flex; flex-direction: column; margin: 15px auto; justify-content: space-between } 
-.postBottom .infoText { font-size: 17px; line-height: 130%; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;overflow: hidden; text-overflow: ellipsis; } 
+.postBottom .infoText { font-size: 17px; line-height: 130%; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis; } 
 .locPay { display: flex; align-items: center; justify-content: space-between; } 
 .locPay p { font-size: 15px; color: #494949; font-family: pLight; line-height: 130%; margin-top: 10px; } 
 .locPay span { padding-top: 7px; font-family: pSemi; font-size: 18px; } 
@@ -68,14 +70,14 @@
 .schOne:hover .post img { transform: translate(-50%, -50%) scale(1.08); } 
 .schOne:hover .postLoc { background-color: #ffda53; transition: all .3s; } 
 
-.postLoc { position: absolute; top: 26%; left: 5%; padding: 8px calc(100vw * 18/ 1920) 8px 30px; display: flex; align-items: center; justify-content: space-between; background: #fff;font-size: calc(100vw * 13 / 1920 ); border-radius: 10px; box-shadow: 1px 1px 4px #747474ac; line-height: 125%; z-index: 10; } 
+.postLoc { position: absolute; top: 26%; left: 5%; padding: 8px calc(100vw * 18/ 1920) 8px 30px; display: flex; align-items: center; justify-content: space-between; background: #fff; font-size: calc(100vw * 13 / 1920 ); border-radius: 10px; box-shadow: 1px 1px 4px #747474ac; line-height: 125%; z-index: 10; } 
 .postLoc::before { position: absolute; top: 25%; left: 10%; content: ''; background: url(../source/loc.png) center center; background-size: cover; width: 15px; height: 15px; } 
 
 .goDetail .postBottom { height: 70px; display: flex; flex-direction: column; width: 330px; margin: 15px auto 15px 15px; } 
 .goDetail .postBottom h3 { width: calc(100vw * 280 / 1920); font-size: 18px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; } 
 .goDetail .postBottom p { width: calc(100vw * 280 / 1920); font-size: 15px; color: #494949; font-family: pLight; line-height: 130%; overflow: hidden; display: -webkit-box; margin-top: 10px; -webkit-line-clamp: 2; -webkit-box-orient: vertical; text-overflow: ellipsis; } 
 
-.hiddenBox { display: flex; align-items: center; justify-content: space-between; position: absolute; bottom: -4px; width: 100%;height: 50px; z-index: -1; background-color: rgba(50, 50, 50, 0.7); color: #fff; padding: calc(100vw * 20 / 1920); font-size: calc(100vw * 15 / 1920); box-sizing: border-box;} 
+.hiddenBox { display: flex; align-items: center; justify-content: space-between; position: absolute; bottom: -4px; width: 100%; height: 50px; z-index: -1; background-color: rgba(50, 50, 50, 0.7); color: #fff; padding: calc(100vw * 20 / 1920); font-size: calc(100vw * 15 / 1920); box-sizing: border-box; } 
 
 .schOne:hover .hiddenBox { opacity: 1; animation-name: fadeIn; animation: fadeIn 0.4s ease-in-out; z-index: 10; } 
 
@@ -85,7 +87,8 @@
 .hiddenBox .viewCnt::before { content: ""; top: calc(100vw * -2/ 1920); left: -25px; width: 20px; height: 20px; background: url(../source/cG_view.png) center center; position: absolute; } 
 .hiddenBox .chatCnt::before { content: ""; top: calc(100vw * -2/ 1920); left: -25px; width: 20px; height: 20px; background: url(../source/cG_send.png) center center; position: absolute; } 
 
-@keyframes fadeIn {from { opacity: 0; transform: translateY(15px); } 
+@keyframes fadeIn { 
+ from { opacity: 0; transform: translateY(15px); } 
 to { opacity: 1; transform: none; } 
  }
 
@@ -141,3 +144,29 @@ to { opacity: 1; transform: none; }
 #scrollTop:hover { transition: 0.5s ease; background-color: #efefef; } 
 #scrollTop::before { content: "\2303"; position: absolute; top: calc(100vw * 7 / 1920); left: calc(100vw * 17 / 1920); color: #171717; font-family: pLight; font-size: calc(100vw * 23 / 1920); } 
 #scrollTop .topTxt { display: block; margin-top: calc(100vw * 23 / 1920); font-size: calc(100vw * 14 / 1920); } 
+
+
+
+/* --------------- responsible --------------- */
+
+@media screen and (max-width: 768px) { 
+    body { background-color: pink; cursor: auto; }
+    .cursor { visibility: hidden;} 
+    .cursor_follower { visibility: hidden;}
+    
+    .mainBnLogo { width: 350px; filter: drop-shadow(2px 2px 3px #00000052); } 
+    .mainCon p { width: 360px; font-size: 18px;}
+}
+
+@media screen and (min-width: 1024px) { 
+    body { background-color: aqua; } 
+
+    .desktop { display: block; } 
+    header { }
+
+    footer { } 
+}
+
+@media screen and (min-width: 1440px) { 
+    body { background-color: gray; } 
+}
