--- a/css/headFoot.css
+++ b/css/headFoot.css
@@ -1,17 +1,28 @@
-@import "./reset.css";
-/*
-body { cursor: url(../source/cursor_Commom.cur), auto !important; }
+@import "./reset.css"; 
 
-*/
-/* 
-*/
-body { cursor: none; overflow-x: hidden;} 
+body { cursor: none; overflow-x: hidden; } 
 
 header { position: fixed; top: 0; z-index: 100; width: 100%; background: #fff; box-shadow: 0 2px 5px #a9a9a95c; } 
 header .headLogo { width: 170px; margin-right: 30px; } 
 header nav { display: flex; align-items: center; padding: 20px 8% 20px 8%; } 
 
-.gnb { width: 100%; display: flex; justify-content: space-between; align-items: center; } 
+
+
+.menuTrigger { display: none; } 
+.menuTrigger span { display: block; width: 33px; height: 4px; margin-bottom: 5px; position: relative; background: #222; border-radius: 3px; transform-origin: 4px 0px; transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+opacity 0.55s ease; } 
+#menuToggle span:first-child { transform-origin: 0% 0%; } 
+
+#menuToggle span:nth-last-child(2){ transform-origin: 0% 100%; } 
+
+
+
+
+.gnb { position: relative; width: 100%; } 
+.gnb .gnbInner { display: flex; justify-content: space-between; align-items: center; } 
+.gnb .gnbInner.active { width: 70%; padding: 50px; } 
+
 .gnb .gnbTab { display: flex; justify-content: center; align-items: center; } 
 .gnb .gnbTab li { margin-right: 20px; font-size: 18px; } 
 
@@ -54,40 +65,60 @@ footer p { margin-top: 10px; color: #222; }
 /* ----------------------- mouse -------------------------- */
 /* 
 */
-.cursor {
-    visibility: visible;
-    width: calc(100vw * 18 / 1920);
-    height: calc(100vw * 18 / 1920);
-    border-radius: 50%;
-    background-color: var(--yellow);
-    position: absolute;
-    z-index: 200;
-    top: 0;
-    right: 0;
-    transform: translate(-50%, -50%);
-    transform-origin: 100% 100%;
-    transition: all 0.3s ease;
-    transition-property: background, transform;
-}
+.cursor { visibility: visible; width: calc(100vw * 18 / 1920); height: calc(100vw * 18 / 1920); border-radius: 50%; background-color: var(--yellow); position: absolute; z-index: 200; top: 0; right: 0; transform: translate(-50%, -50%); transform-origin: 100% 100%; transition: all 0.3s ease; transition-property: background, transform; } 
 
-.cursor_follower {
-    position: absolute;
-    width: calc(100vw * 60 / 1920);
-    height: calc(100vw * 60 / 1920);
-    z-index: 150;
-    opacity: .4;
-    border: 2px solid var(--color-main);
-    border-radius: 50%;
-    user-select: none;
-    transform: all .3s ease;
-} 
+.cursor_follower { position: absolute; width: calc(100vw * 60 / 1920); height: calc(100vw * 60 / 1920); z-index: 150; opacity: .4; border: 2px solid var(--color-main); border-radius: 50%; user-select: none; transform: all .3s ease; } 
 
-.sHover { visibility: hidden; }
-.sHover_f { border: none; background: var(--color-main); filter: blur(3px); transform: scale(1.3); opacity: .2; }
-.cHover_f { border: none; background: var(--color-sub); filter: blur(3px); transform: scale(1.3); opacity: .2; }
+.sHover { visibility: hidden; } 
+.sHover_f { border: none; background: var(--color-main); filter: blur(3px); transform: scale(1.3); opacity: .2; } 
+.cHover_f { border: none; background: var(--color-sub); filter: blur(3px); transform: scale(1.3); opacity: .2; } 
 
 
 /* ------------------- 검색결과 X --------------------------*/
-.noneResult { display: flex; flex-direction: column; justify-content: center; align-items: center; margin: 80px auto 0 auto; width: 30%; height: 250px; background: #e5e5e5; border-radius: 30px; opacity: .5; }
-.noneResult img { width: 60px; }
+.noneResult { display: flex; flex-direction: column; justify-content: center; align-items: center; margin: 80px auto 0 auto; width: 30%; height: 250px; background: #e5e5e5; border-radius: 30px; opacity: .5; } 
+.noneResult img { width: 60px; } 
 .noneResult p { margin-top: 20px; font-size: 16px; } 
+
+
+
+
+/* --------------- responsible --------------- */
+
+@media screen and (max-width: 768px) { 
+    body { background-color: pink; cursor: auto; }
+    .cursor { visibility: hidden;} 
+    .cursor_follower { visibility: hidden;}
+    
+    .gnbInner { position: absolute;
+        width: 300px;
+        margin: -100px 0 0 -50px;
+        padding: 50px;
+        padding-top: 125px;
+        
+        list-style-type: none;
+        -webkit-font-smoothing: antialiased;
+        /* to stop flickering of text in safari */
+        
+        transform-origin: 0% 0%;
+        transform: translate(-100%, 0);
+        
+        transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0); }
+
+    .menuTrigger { display: block; position: absolute; }
+
+    .mainBnLogo { width: 350px; filter: drop-shadow(2px 2px 3px #00000052); } 
+    .mainCon p { width: 360px; font-size: 18px;}
+}
+
+@media screen and (min-width: 1024px) { 
+    body { background-color: aqua; } 
+
+    .desktop { display: block; } 
+    header { }
+
+    footer { } 
+}
+
+@media screen and (min-width: 1440px) { 
+    body { background-color: gray; } 
+}
