--- a/css/headFoot.css
+++ b/css/headFoot.css
@@ -89,22 +89,26 @@ footer p { margin-top: 10px; color: #222; }
     .cursor { visibility: hidden;} 
     .cursor_follower { visibility: hidden;}
     
-    .gnbInner { position: absolute;
+    .gnbInner { 
+        flex-direction: column;
+        position: absolute;
+        right: 0;
+        top: -100%;
         width: 300px;
-        margin: -100px 0 0 -50px;
         padding: 50px;
         padding-top: 125px;
         
-        list-style-type: none;
         -webkit-font-smoothing: antialiased;
         /* to stop flickering of text in safari */
-        
+        background: #fff;
         transform-origin: 0% 0%;
         transform: translate(-100%, 0);
         
         transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0); }
 
-    .menuTrigger { display: block; position: absolute; }
+    .gnb .gnbTab { flex-direction: column; }
+    .gnb .userHead { flex-direction: column; }
+    .menuTrigger { display: block; position: absolute; background: none; }
 
     .mainBnLogo { width: 350px; filter: drop-shadow(2px 2px 3px #00000052); } 
     .mainCon p { width: 360px; font-size: 18px;}
