--- a/css/main.css
+++ b/css/main.css
@@ -145,3 +145,41 @@ to { opacity: 1; transform: none; }
 #scrollTop::before { content: "\2303"; position: absolute; top: calc(100vw * 7 / 1920); left: calc(100vw * 17 / 1920); color: #171717; font-family: pLight; font-size: calc(100vw * 23 / 1920); } 
 #scrollTop .topTxt { display: block; margin-top: calc(100vw * 23 / 1920); font-size: calc(100vw * 14 / 1920); } 
 
+/* --------------- responsible --------------- */
+
+@media screen and (max-width: 768px){
+ .mainBnLogo { width: 350px; filter: drop-shadow(2px 2px 3px #00000052); } 
+ .mainCon p { width: 360px; font-size: 18px; } 
+
+ .scrollDown { left: 46%; bottom: 5%; padding-top: 45px; font-size: 15px; } 
+ .scrollDown span { top: -20px; left: 33%; width: 20px; height: 20px; margin-left: calc( 100vw * -12 / 1920 ); border-left: 2px solid #666; border-bottom: 2px solid #666; } 
+
+ .mainSection { padding: 0 9%; margin: 30px 0 100px 0; } 
+
+ /* -------------------- 여행 상품 ------------------------------- */
+ .itemAll { margin: 20px 0; padding-bottom: 30px; display: flex; flex-direction: column; } 
+ .itemOne { width: 100%; height: 335px; margin: 15px 0; } 
+
+ .postImg img { width: 100%; height: 100%; object-fit: cover; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); transition: transform 0.3s; } 
+
+ /* ------------------- 동행, 일정 ------------------- */
+ .groAll, .schAll { width: 100%; margin: 20px 0; display: flex; flex-direction: column; } 
+
+ .goDetail { width: 100%; margin: 10px 0; } 
+ .schOne { width: 100%; height: 100%; position: relative; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; } 
+
+
+
+ /* ---------- scrollTop ------------- */
+#scrollTop { width: 50px; height: 50px; bottom: 30px; right: 25px; } 
+#scrollTop::before { top: 7px; left: 15px; font-size: 25px; } 
+#scrollTop .topTxt {  margin-top: 23px; font-size: 14px; } 
+
+
+}
+
+@media screen and (min-width: 1024px) { body { background-color: aqua; } 
+ }
+
+@media screen and (min-width: 1440px) { body { background-color: gray; } 
+ }
