--- a/css/main.css
+++ b/css/main.css
@@ -156,6 +156,11 @@ to { opacity: 1; transform: none; }
 
  .mainSection { padding: 0 9%; margin: 30px 0 100px 0; } 
 
+ /* ------------------ slider --------------------- */
+ .slider .bn { height: 25vh; margin: 50px 0 30px 0; } 
+ .bContent p { padding: 0 25px; text-shadow: 2px 2px 6px #1c1c1cd7; font-size: 28px; } 
+
+
  /* -------------------- 여행 상품 ------------------------------- */
  .itemAll { margin: 20px 0; padding-bottom: 30px; display: flex; flex-direction: column; } 
  .itemOne { width: 100%; height: 335px; margin: 15px 0; } 
@@ -173,9 +178,7 @@ to { opacity: 1; transform: none; }
  /* ---------- scrollTop ------------- */
 #scrollTop { width: 50px; height: 50px; bottom: 30px; right: 25px; } 
 #scrollTop::before { top: 7px; left: 15px; font-size: 25px; } 
-#scrollTop .topTxt {  margin-top: 23px; font-size: 14px; } 
-
-
+#scrollTop .topTxt { margin-top: 23px; font-size: 14px; } 
 }
 
 @media screen and (min-width: 1024px) { body { background-color: aqua; } 
