--- a/css/headFoot.css
+++ b/css/headFoot.css
@@ -71,6 +71,7 @@ footer p { margin-top: 10px; color: #222; }
 /* --------------- responsible --------------- */
 
 @media screen and (max-width: 768px) { 
+body { cursor: auto;}
  .cursor { visibility: hidden; } 
  .cursor_follower { visibility: hidden; } 
 
@@ -93,7 +94,7 @@ footer p { margin-top: 10px; color: #222; }
  .gnb .gnbTab { flex-direction: column; margin-top: 70px; width: 100%; } 
  .gnb .gnbTab li { margin-top: 30px; width: 100%; padding-bottom: 30px; border-bottom: 1px solid #ddd; font-size: 22px; font-family: pBold; text-align: center; }
  .gnb .gnbTab li:last-child { border: none;}
- .gnb .gnbTab li a { color: #333; }
+ .gnb .gnbTab li a { width: 100%; color: #333; }
  .gnb .userHead { display: none; } 
  .menuTrigger { display: block; position: absolute; background: none; } 
 
