--- a/css/main.css
+++ b/css/main.css
@@ -164,6 +164,7 @@ to { opacity: 1; transform: none; }
  /* -------------------- 여행 상품 ------------------------------- */
  .itemAll { margin: 20px 0; padding-bottom: 30px; display: flex; flex-direction: column; } 
  .itemOne { width: 100%; height: 335px; margin: 15px 0; } 
+ .itemOne:nth-child(2) ~ .itemOne { display: none; }
 
  .postImg { width: 100%;}
  .postImg img { width: 100%; height: 100%; object-fit: cover; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); transition: transform 0.3s; } 
@@ -173,6 +174,7 @@ to { opacity: 1; transform: none; }
  
  .groAll .goDetail { width: 100%; margin: 10px 0; } 
  .schOne { width: 100%; height: 100%; position: relative; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; } 
+ .goDetail:nth-child(2) ~ .goDetail { display: none; }
  
  .schTopInfo { width: 280px; height: 50px; padding: 5px 15px; border-radius: 13px; }
  .schTopInfo .subTxt { font-size: 13px; }
@@ -188,6 +190,7 @@ to { opacity: 1; transform: none; }
  /* ------------------- 일정 ------------------- */
 
  .schAll .schOne { width: 100%; margin: 15px 0;}
+ .schAll .schOne:nth-child(2) ~ .schOne { display: none; }
  .schOne .schMap { width: 100%; height: 200px;}
 
 
@@ -197,8 +200,8 @@ to { opacity: 1; transform: none; }
 #scrollTop .topTxt { margin-top: 23px; font-size: 14px; } 
 }
 
-@media screen and (min-width: 1024px) { body { background-color: aqua; } 
+@media screen and (min-width: 1024px) { body { } 
  }
 
-@media screen and (min-width: 1440px) { body { background-color: gray; } 
+@media screen and (min-width: 1440px) { body {} 
  }
