--- a/css/store.css
+++ b/css/store.css
@@ -24,12 +24,17 @@ h3::before { content: ""; position: absolute; top: 12px; left: -5px; width: 135p
 
 /* ----------------------------------------------------- */
 @media screen and (max-width: 768px) {
-    .slider .bn { height: 260px; margin: 60px 0 50px 0; } 
+    section { padding: 0 8%; }
+    .ctryBanner { flex-direction: column;}
+    .ctryBanner .ctry { margin: 10px 0; width: 100%; height: 150px; border-radius: 20px; }
+    .ctryBanner .ctry .ctryBg { width: 100%;}
+
+    .slider .bn { height: 240px; margin: 60px 0 50px 0; }
+    .slider .bn p { margin: 0 20px; width: 100%; text-align: center;}
  } 
  
 @media screen and (min-width: 1024px) { 
-    body { } 
 }
 
-@media screen and (min-width: 1440px) { body { } 
+@media screen and (min-width: 1440px) { 
 }
