--- a/css/main.css
+++ b/css/main.css
@@ -158,15 +158,15 @@ to { opacity: 1; transform: none; }
 
  /* ------------------ slider --------------------- */
  .slider .bn { height: 25vh; margin: 50px 0 30px 0; } 
- .bContent p { padding: 0 25px; text-shadow: 2px 2px 6px #1c1c1cd7; font-size: 28px; } 
+ .bContent p { padding: 0 25px; text-shadow: 2px 2px 6px #1c1c1cd7; font-size: 28px; text-align: center;} 
 
 
  /* -------------------- 여행 상품 ------------------------------- */
  .itemAll { margin: 20px 0; padding-bottom: 30px; display: flex; flex-direction: column; } 
  .itemOne { width: 100%; height: 335px; margin: 15px 0; } 
- .itemOne:nth-child(2) ~ .itemOne { display: none; }
+ .itemOne:nth-child(2) ~ .itemOne { display: none; } 
 
- .postImg { width: 100%;}
+ .postImg { width: 100%; } 
  .postImg img { width: 100%; height: 100%; object-fit: cover; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); transition: transform 0.3s; } 
 
  /* ------------------- 동행 ------------------- */
@@ -174,34 +174,38 @@ to { opacity: 1; transform: none; }
  
  .groAll .goDetail { width: 100%; margin: 10px 0; } 
  .schOne { width: 100%; height: 100%; position: relative; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; } 
- .goDetail:nth-child(2) ~ .goDetail { display: none; }
+ .goDetail:nth-child(2) ~ .goDetail { display: none; } 
  
- .schTopInfo { width: 280px; height: 50px; padding: 5px 15px; border-radius: 13px; }
- .schTopInfo .subTxt { font-size: 13px; }
- .schOne .post { width: 100%; height: 180px; }
- .goDetail .postImg { width: 100%; }
+ .schTopInfo { width: 280px; height: 50px; padding: 5px 15px; border-radius: 13px; } 
+ .schTopInfo .subTxt { font-size: 13px; } 
+ .schOne .post { width: 100%; height: 180px; } 
+ .goDetail .postImg { width: 100%; } 
  
- .goDetail .postBottom { padding: 10px 0 20px 0;}
- .goDetail .postBottom h3 { width: 300px;}
- .goDetail .postBottom p { width: 300px; }
+ .goDetail .postBottom { padding: 10px 0 20px 0; } 
+ .goDetail .postBottom h3 { width: 300px; } 
+ .goDetail .postBottom p { width: 300px; } 
 
- .postLoc { top: 28%; padding: 7px 10px 7px 28px; font-size: 12px; border-radius: 8px; }
+ .postLoc { top: 28%; padding: 7px 10px 7px 28px; font-size: 12px; border-radius: 8px; } 
+ .hiddenBox { height: 45px; padding: 20px 23px; font-size: 13px; } 
+ .hiddenBox .viewCnt::before { top: -2px; left: -25px; } 
+ .hiddenBox .chatCnt::before { top: -2px; left: -25px; } 
+
  
  /* ------------------- 일정 ------------------- */
 
- .schAll .schOne { width: 100%; margin: 15px 0;}
- .schAll .schOne:nth-child(2) ~ .schOne { display: none; }
- .schOne .schMap { width: 100%; height: 200px;}
+ .schAll .schOne { width: 100%; margin: 15px 0; } 
+ .schAll .schOne:nth-child(2) ~ .schOne { display: none; } 
+ .schOne .schMap { width: 100%; height: 200px; } 
 
 
  /* ---------- scrollTop ------------- */
 #scrollTop { width: 50px; height: 50px; bottom: 30px; right: 25px; } 
 #scrollTop::before { top: 7px; left: 15px; font-size: 25px; } 
 #scrollTop .topTxt { margin-top: 23px; font-size: 14px; } 
-}
+ }
 
 @media screen and (min-width: 1024px) { body { } 
  }
 
-@media screen and (min-width: 1440px) { body {} 
+@media screen and (min-width: 1440px) { body { } 
  }
