--- a/css/cGroup.css
+++ b/css/cGroup.css
@@ -12,7 +12,7 @@ section { min-height: calc(100vh - 240px); padding: 0 9%; margin-top: 200px; }
 
 .schAll { width: calc(100vw * 1660 / 1920); margin: 20px auto; display: flex; flex-wrap: wrap; } 
 
-.goDetail { width: calc(100vw * 360 / 1920); margin: calc(100vw * 20 / 1920) calc(100vw * 40 / 1920) calc(100vw * 20 / 1920) 0;}
+.goDetail { width: calc(100vw * 360 / 1920); margin: calc(100vw * 20 / 1920) calc(100vw * 40 / 1920) calc(100vw * 20 / 1920) 0; } 
 .schOne { width: 100%; height: 100%; position: relative; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; } 
 .schTopInfo { position: absolute; top: 5%; left: 4.5%; width: calc(100vw * 280 / 1920); padding: calc(100vw * 12 / 1920) calc(100vw * 20 / 1920); display: flex; align-items: center; justify-content: space-between; background: #fff; font-size: 13px; border-radius: 15px; box-shadow: 1px 1px 4px #747474ac; line-height: 125%; z-index: 10; } 
 .schTopInfo .schUser { display: flex; align-items: center; } 
@@ -30,34 +30,74 @@ section { min-height: calc(100vh - 240px); padding: 0 9%; margin-top: 200px; }
 .schOne:hover .post img { transform: translate(-50%, -50%) scale(1.08); } 
 .schOne:hover .postLoc { background-color: #ffda53; transition: all .3s; } 
 
-.postLoc { position: absolute; top: 26%; left: 5%; padding: 8px calc(100vw * 18/ 1920) 8px 30px; display: flex; align-items: center; justify-content: space-between; background: #fff;font-size: calc(100vw * 13 / 1920 ); border-radius: 10px; box-shadow: 1px 1px 4px #747474ac; line-height: 125%; z-index: 10; } 
+.postLoc { position: absolute; top: 26%; left: 5%; padding: 8px calc(100vw * 18/ 1920) 8px 30px; display: flex; align-items: center; justify-content: space-between; background: #fff; font-size: calc(100vw * 13 / 1920 ); border-radius: 10px; box-shadow: 1px 1px 4px #747474ac; line-height: 125%; z-index: 10; } 
 .postLoc::before { position: absolute; top: 25%; left: 10%; content: ''; background: url(../source/loc.png) center center; background-size: cover; width: 15px; height: 15px; } 
 
-.postBottom { height: 70px; display: flex; flex-direction: column; width: 330px; margin: 15px auto 15px 15px; }
-.postBottom h3 {  width: calc(100vw * 320 / 1920); font-size: 18px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; } 
-.postBottom p {  width: calc(100vw * 320 / 1920); font-size: 15px; color: #494949; font-family: pLight; line-height: 130%; overflow: hidden; display: -webkit-box; margin-top: 10px;-webkit-line-clamp: 2; -webkit-box-orient: vertical; text-overflow: ellipsis; } 
+.postBottom { height: 70px; display: flex; flex-direction: column; width: 330px; margin: 15px auto 15px 15px; } 
+.postBottom h3 { width: calc(100vw * 320 / 1920); font-size: 18px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; } 
+.postBottom p { width: calc(100vw * 320 / 1920); font-size: 15px; color: #494949; font-family: pLight; line-height: 130%; overflow: hidden; display: -webkit-box; margin-top: 10px; -webkit-line-clamp: 2; -webkit-box-orient: vertical; text-overflow: ellipsis; } 
 
-.hiddenBox { display: flex; align-items: center; justify-content: space-between; position: absolute; bottom: -4px; width: 100%;height: 50px; z-index: -1; background-color: rgba(50, 50, 50, 0.7); color: #fff; padding: calc(100vw * 20 / 1920); font-size: calc(100vw * 15 / 1920); box-sizing: border-box;} 
+.hiddenBox { display: flex; align-items: center; justify-content: space-between; position: absolute; bottom: -4px; width: 100%; height: 50px; z-index: -1; background-color: rgba(50, 50, 50, 0.7); color: #fff; padding: calc(100vw * 20 / 1920); font-size: calc(100vw * 15 / 1920); box-sizing: border-box; } 
 
-.schOne:hover .hiddenBox { opacity: 1; animation-name: fadeIn;animation: fadeIn 0.4s ease-in-out; z-index: 10; } 
+.schOne:hover .hiddenBox { opacity: 1; animation-name: fadeIn; animation: fadeIn 0.4s ease-in-out; z-index: 10; } 
 
-.viewCnt, .chatCnt { position: relative; }
-.viewCnt { margin-right: 30px;}
+.viewCnt, .chatCnt { position: relative; } 
+.viewCnt { margin-right: 30px; } 
 
-.hiddenBox .viewCnt::before { content: ""; top: calc(100vw * -2/ 1920); left: -25px; width: 20px; height: 20px; background: url(../source/cG_view.png) center center; position: absolute;  }
-.hiddenBox .chatCnt::before { content: ""; top: calc(100vw * -2/ 1920); left: -25px; width: 20px; height: 20px; background: url(../source/cG_send.png) center center; position: absolute;  }
+.hiddenBox .viewCnt::before { content: ""; top: calc(100vw * -2/ 1920); left: -25px; width: 20px; height: 20px; background: url(../source/cG_view.png) center center; position: absolute; } 
+.hiddenBox .chatCnt::before { content: ""; top: calc(100vw * -2/ 1920); left: -25px; width: 20px; height: 20px; background: url(../source/cG_send.png) center center; position: absolute; } 
 
 @keyframes fadeIn { 
-from { opacity: 0; transform: translateY(15px); } 
+ from { opacity: 0; transform: translateY(15px); } 
 to { opacity: 1; transform: none; } 
-} 
+ }
 
-.pagination { margin: 40px auto; display: flex; align-items: center; justify-content: center;}
-.pagination .pageNum { display: inline-block; width: 25px; height: 25px; margin: 0 5px; font-family: pRegular; font-size: 14px; background: transparent; border-radius: 20px; color: #444; text-align: center; line-height: 25px; cursor: pointer; transition: all .2s;}
-.pagination .pageNum:hover { background-color: #ffd43856; }
-.pagination .pageNum.active { color: #000; background-color: var(--yellow); }
-.pagination .arrow { width: 12px; height: 12px;  opacity: .5; cursor: pointer; transition: all .2s;}
-.pagination .prevBtn { margin-right: 5px; background: url(../source/arrow_l.png) center center; background-size: cover; }
-.pagination .nextBtn { margin-left: 5px; background: url(../source/arrow_r.png) center center; background-size: cover; }
-.pagination .arrow:hover { opacity: 1; }
+.pagination { margin: 40px auto; display: flex; align-items: center; justify-content: center; } 
+.pagination .pageNum { display: inline-block; width: 25px; height: 25px; margin: 0 5px; font-family: pRegular; font-size: 14px; background: transparent; border-radius: 20px; color: #444; text-align: center; line-height: 25px; cursor: pointer; transition: all .2s; } 
+.pagination .pageNum:hover { background-color: #ffd43856; } 
+.pagination .pageNum.active { color: #000; background-color: var(--yellow); } 
+.pagination .arrow { width: 12px; height: 12px; opacity: .5; cursor: pointer; transition: all .2s; } 
+.pagination .prevBtn { margin-right: 5px; background: url(../source/arrow_l.png) center center; background-size: cover; } 
+.pagination .nextBtn { margin-left: 5px; background: url(../source/arrow_r.png) center center; background-size: cover; } 
+.pagination .arrow:hover { opacity: 1; } 
 
+
+/* --------------- responsible --------------- */
+
+@media screen and (max-width: 768px){
+ .schAll { width: 100%; margin: 20px 0; display: flex; flex-direction: column; } 
+ .goDetail { width: 100%; }
+ .schOne { width: 100%; height: 100%; position: relative; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; } 
+ 
+ .schTopInfo { width: 280px; height: 50px; padding: 5px 15px; border-radius: 13px; } 
+ .schTopInfo .subTxt { font-size: 13px; } 
+ .schOne .post { width: 100%; height: 180px; } 
+ .goDetail .postImg { width: 100%; } 
+ 
+ .goDetail .postBottom { padding: 10px 0 20px 0; } 
+ .goDetail .postBottom h3 { width: 300px; } 
+ .goDetail .postBottom p { width: 300px; } 
+ 
+ .postLoc { top: 28%; padding: 7px 10px 7px 28px; font-size: 12px; border-radius: 8px; } 
+ .hiddenBox { height: 45px; padding: 20px 23px; font-size: 13px; } 
+ .hiddenBox .viewCnt::before { top: -2px; left: -25px; } 
+ .hiddenBox .chatCnt::before { top: -2px; left: -25px; } 
+ 
+    .postBtn { padding: 0; background: var(--color-main); font-family: pMedium; box-shadow: 0 1px 6px #36363689; color: #171717; align-content: center; width: 50px; height: 50px; bottom: 30px; right: 25px; border-radius: 50%; text-align: center; position: fixed; z-index: 100; cursor: pointer; } 
+    .postBtn:hover { transition: 0.5s ease; background-color: #efefef; } 
+    .postBtn::before { content: ""; background: url(../source/writeIco.png) center center no-repeat; position: absolute; width: 28px; height: 28px; top: 9px; left: 10px; background-size: cover; } 
+
+
+    /* ---------- scrollTop ------------- */
+#scrollTop { background: #fff; font-family: pMedium; box-shadow: 0 1px 6px #36363689; color: #171717; align-content: center;  width: 50px; height: 50px; bottom: 90px; right: 25px; border-radius: 50%; text-align: center; font-size: 12px; position: fixed; z-index: 100; cursor: pointer; } 
+#scrollTop:hover { transition: 0.5s ease; background-color: #efefef; } 
+#scrollTop::before { content: "\2303"; position: absolute; top: 7px; left: 15px; color: #171717; font-family: pLight; font-size: 25px; } 
+#scrollTop .topTxt { display: block; margin-top: 23px; font-size: 14px; } 
+
+}
+ 
+ @media screen and (min-width: 1024px) { body { } 
+ }
+ 
+ @media screen and (min-width: 1440px) { body { } 
+ }
