--- a/css/cSchedule.css
+++ b/css/cSchedule.css
@@ -64,3 +64,37 @@ section { min-height: calc(100vh - 240px); padding: 0 9%; margin-top: 200px;}
 .pagination .prevBtn { margin-right: 5px; background: url(../source/arrow_l.png) center center; background-size: cover; }
 .pagination .nextBtn { margin-left: 5px; background: url(../source/arrow_r.png) center center; background-size: cover; }
 .pagination .arrow:hover { opacity: 1; }
+
+
+/* --------------- responsible --------------- */
+
+@media screen and (max-width: 768px){
+    .schAll { width: 100%; margin: 20px 0; display: flex; flex-direction: column; } 
+    .goDetail { width: 100%; }
+    .schOne { width: 100%; height: 100%; position: relative; margin-bottom: 20px; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; } 
+    
+    .schTopInfo { width: 280px; height: 50px; padding: 5px 15px; border-radius: 13px; } 
+    .schTopInfo .subTxt { font-size: 13px; } 
+    .schOne .post { width: 100%; height: 180px; } 
+    .schOne .schMap { width: 100%; height: 200px; } 
+    
+    .pagination { display: none;}
+
+       .postBtn { padding: 0; background: var(--color-main); font-family: pMedium; box-shadow: 0 1px 6px #36363689; color: #171717; align-content: center; width: 50px; height: 50px; bottom: 30px; right: 25px; border-radius: 50%; text-align: center; position: fixed; z-index: 100; cursor: pointer; } 
+       .postBtn:hover { transition: 0.5s ease; background-color: #efefef; } 
+       .postBtn::before { content: ""; background: url(../source/writeIco.png) center center no-repeat; position: absolute; width: 28px; height: 28px; top: 9px; left: 10px; background-size: cover; } 
+   
+   
+       /* ---------- scrollTop ------------- */
+   #scrollTop { background: #fff; font-family: pMedium; box-shadow: 0 1px 6px #36363689; color: #171717; align-content: center;  width: 50px; height: 50px; bottom: 90px; right: 25px; border-radius: 50%; text-align: center; font-size: 12px; position: fixed; z-index: 100; cursor: pointer; } 
+   #scrollTop:hover { transition: 0.5s ease; background-color: #efefef; } 
+   #scrollTop::before { content: "\2303"; position: absolute; top: 7px; left: 15px; color: #171717; font-family: pLight; font-size: 25px; } 
+   #scrollTop .topTxt { display: block; margin-top: 23px; font-size: 14px; } 
+   
+   }
+    
+    @media screen and (min-width: 1024px) { body { } 
+    }
+    
+    @media screen and (min-width: 1440px) { body { } 
+    }
