--- a/css/headFoot.css
+++ b/css/headFoot.css
@@ -76,8 +76,8 @@ footer p { margin-top: 10px; color: #222; }
  .cursor { visibility: hidden; } 
  .cursor_follower { visibility: hidden; } 
 
- header .headLogo { width: 180px; margin-top: 10px; } 
- header nav { display: flex; align-items: center; justify-content: center; padding: 15px 8% 15px 8%; } 
+ header .headLogo { width: 145px; margin-top: 10px; } 
+ header nav { display: flex; align-items: center; justify-content: center; padding:  5px 5.5%; } 
 
  .menuTrigger { display: block; position: relative; top: -10px; right: 0; user-select: none;} 
  .menuTrigger span { display: block; width: 33px; height: 4px; margin-bottom: 5px; position: relative; background: #929292; border-radius: 3px; transform-origin: 4px 0px; transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0), background 0.5s cubic-bezier(0.77,0.2,0.05,1.0), opacity 0.55s ease; } 
@@ -88,8 +88,8 @@ footer p { margin-top: 10px; color: #222; }
 .menuTrigger.active span:nth-child(3) { opacity: 0; transform: rotate(0deg) scale(0.2, 0.2); } 
 .menuTrigger.active span:last-child { transform: rotate(-45deg) translate(0, -1px); } 
 
-.gnb .gnbInner { position: absolute; top: -50px; right: -300%; width: 0; height: 100vh; flex-direction: column; justify-content: flex-start; align-items: center; padding: 50px; -webkit-font-smoothing: antialiased; background: #fff; transform-origin: 0% 0%; transform: translate(-100%, 0); transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0); box-shadow: 0 6px 15px #0e0e0e59; } 
- .gnb .gnbInner.active { width: 60vw; } 
+.gnb .gnbInner { position: absolute; top: -50px; right: -150%; width: 0; height: 100vh; flex-direction: column; justify-content: flex-start; align-items: center; padding: 50px; -webkit-font-smoothing: antialiased; background: #fff; transform-origin: 0% 0%; transform: translate(-100%, 0); transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0); box-shadow: 0 6px 15px #0e0e0e59; } 
+ .gnb .gnbInner.active { width: 55vw; right: -200%; } 
 
  .gnb .gnbTab { flex-direction: column; margin-top: 70px; width: 100%; } 
  .gnb .gnbTab li { margin-top: 30px; width: 100%; padding-bottom: 30px; border-bottom: 1px solid #ddd; font-size: 22px; font-family: pBold; text-align: center; } 
