--- a/css/cGroup.css
+++ b/css/cGroup.css
@@ -66,10 +66,10 @@ to { opacity: 1; transform: none; }
 
 @media screen and (max-width: 768px){
  .schAll { width: 100%; margin: 20px 0; display: flex; flex-direction: column; } 
- .goDetail { width: 100%; }
+ .goDetail { width: 100%; } 
  .schOne { width: 100%; height: 100%; position: relative; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; } 
  
- .schTopInfo { width: 280px; height: 50px; padding: 5px 15px; border-radius: 13px; } 
+ .schTopInfo { width: 82%; height: 50px; padding: 5px 15px; border-radius: 13px; } 
  .schTopInfo .subTxt { font-size: 13px; } 
  .schOne .post { width: 100%; height: 180px; } 
  .goDetail .postImg { width: 100%; } 
@@ -83,18 +83,16 @@ to { opacity: 1; transform: none; }
  .hiddenBox .viewCnt::before { top: -2px; left: -25px; } 
  .hiddenBox .chatCnt::before { top: -2px; left: -25px; } 
  
- .pagination { display: none;}
-    .postBtn { padding: 0; background: var(--color-main); font-family: pMedium; box-shadow: 0 1px 6px #36363689; color: #171717; align-content: center; width: 50px; height: 50px; bottom: 30px; right: 25px; border-radius: 50%; text-align: center; position: fixed; z-index: 100; cursor: pointer; } 
-    .postBtn:hover { transition: 0.5s ease; background-color: #efefef; } 
-    .postBtn::before { content: ""; background: url(../source/writeIco.png) center center no-repeat; position: absolute; width: 28px; height: 28px; top: 9px; left: 10px; background-size: cover; } 
+ .pagination { display: none; } 
+ .postBtn { padding: 0; background: var(--color-main); font-family: pMedium; box-shadow: 0 1px 6px #36363689; color: #171717; align-content: center; width: 50px; height: 50px; bottom: 30px; right: 25px; border-radius: 50%; text-align: center; position: fixed; z-index: 100; cursor: pointer; } 
+ .postBtn:hover { transition: 0.5s ease; background-color: #efefef; } 
+ .postBtn::before { content: ""; background: url(../source/writeIco.png) center center no-repeat; position: absolute; width: 28px; height: 28px; top: 9px; left: 10px; background-size: cover; } 
 
 
-    /* ---------- scrollTop ------------- */
-#scrollTop { background: #fff; font-family: pMedium; box-shadow: 0 1px 6px #36363689; color: #171717; align-content: center;  width: 50px; height: 50px; bottom: 90px; right: 25px; border-radius: 50%; text-align: center; font-size: 12px; position: fixed; z-index: 100; cursor: pointer; } 
-#scrollTop:hover { transition: 0.5s ease; background-color: #efefef; } 
+ /* ---------- scrollTop ------------- */
+#scrollTop { background: #fff; font-family: pMedium; box-shadow: 0 1px 6px #36363689; color: #171717; align-content: center; width: 50px; height: 50px; bottom: 90px; right: 25px; border-radius: 50%; text-align: center; font-size: 12px; position: fixed; z-index: 100; cursor: pointer; } 
 #scrollTop::before { content: "\2303"; position: absolute; top: 7px; left: 15px; color: #171717; font-family: pLight; font-size: 25px; } 
 #scrollTop .topTxt { display: block; margin-top: 23px; font-size: 14px; } 
-
 }
  
  @media screen and (min-width: 1024px) { body { } 
