--- a/css/main.css
+++ b/css/main.css
@@ -176,7 +176,7 @@ to { opacity: 1; transform: none; }
  .schOne { width: 100%; height: 100%; position: relative; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; } 
  .goDetail:nth-child(2) ~ .goDetail { display: none; } 
  
- .schTopInfo { width: 280px; height: 50px; padding: 5px 15px; border-radius: 13px; } 
+ .schTopInfo { width: 82%; height: 50px; padding: 5px 15px; border-radius: 13px; } 
  .schTopInfo .subTxt { font-size: 13px; } 
  .schOne .post { width: 100%; height: 180px; } 
  .goDetail .postImg { width: 100%; } 
@@ -200,6 +200,7 @@ to { opacity: 1; transform: none; }
 
  /* ---------- scrollTop ------------- */
 #scrollTop { width: 50px; height: 50px; bottom: 30px; right: 25px; } 
+#scrollTop:hover { background-color: #fff; } 
 #scrollTop::before { top: 7px; left: 15px; font-size: 25px; } 
 #scrollTop .topTxt { margin-top: 23px; font-size: 14px; } 
  }
