--- a/css/cGroup.css
+++ b/css/cGroup.css
@@ -80,9 +80,9 @@ to { opacity: 1; transform: none; }
  .schOne .post { width: 100%; height: 180px; } 
  .goDetail .postImg { width: 100%; } 
  
- .goDetail .postBottom { padding: 10px 0 20px 0; } 
- .goDetail .postBottom h3 { width: 300px; } 
- .goDetail .postBottom p { width: 300px; } 
+ .goDetail .postBottom { width: 90%; padding: 10px 0 20px 0; } 
+ .goDetail .postBottom h3 { width: 100%; } 
+ .goDetail .postBottom p { width: 100%; } 
  
  .postLoc { top: 28%; padding: 7px 10px 7px 28px; font-size: 12px; border-radius: 8px; } 
  .hiddenBox { height: 45px; padding: 20px 23px; font-size: 13px; } 
