--- a/css/headFoot.css
+++ b/css/headFoot.css
@@ -76,15 +76,15 @@ footer p { margin-top: 10px; color: #222; }
  .cursor { visibility: hidden; } 
  .cursor_follower { visibility: hidden; } 
 
- header .headLogo { width: 145px; margin-top: 10px; } 
+ header .headLogo { width: 130px; margin-top: 10px; } 
  header nav { display: flex; align-items: center; justify-content: center; padding:  5px 5.5%; } 
 
- .menuTrigger { display: block; position: relative; top: -10px; right: 0; user-select: none;} 
- .menuTrigger span { display: block; width: 33px; height: 4px; margin-bottom: 5px; position: relative; background: #929292; border-radius: 3px; transform-origin: 4px 0px; transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0), background 0.5s cubic-bezier(0.77,0.2,0.05,1.0), opacity 0.55s ease; } 
+ .menuTrigger { display: block; position: relative; top: -9px; right: 0; user-select: none;} 
+ .menuTrigger span { display: block; width: 26px; height: 3px; margin-bottom: 4px; position: relative; background: #a5a5a5; border-radius: 3px; transform-origin: 4px 0px; transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0), background 0.5s cubic-bezier(0.77,0.2,0.05,1.0), opacity 0.55s ease; } 
 .menuTrigger span:nth-child(3) { transform-origin: 0% 0%; } 
 .menuTrigger span:last-child { transform-origin: 0% 100%; } 
 
-.menuTrigger.active span:nth-child(2) { opacity: 1; transform: rotate(45deg) translate(-2px, -1px); background: #929292; } 
+.menuTrigger.active span:nth-child(2) { opacity: 1; transform: rotate(45deg) translate(-2px, -1px); background: #a5a5a5; } 
 .menuTrigger.active span:nth-child(3) { opacity: 0; transform: rotate(0deg) scale(0.2, 0.2); } 
 .menuTrigger.active span:last-child { transform: rotate(-45deg) translate(0, -1px); } 
 
@@ -92,7 +92,7 @@ footer p { margin-top: 10px; color: #222; }
  .gnb .gnbInner.active { width: 55vw; right: -200%; } 
 
  .gnb .gnbTab { flex-direction: column; margin-top: 70px; width: 100%; } 
- .gnb .gnbTab li { margin-top: 30px; width: 100%; padding-bottom: 30px; border-bottom: 1px solid #ddd; font-size: 22px; font-family: pBold; text-align: center; } 
+ .gnb .gnbTab li { margin-top: 20px; width: 100%; padding-bottom: 20px; border-bottom: 1px solid #ddd; font-size: 18px; font-family: pBold; text-align: center; } 
  .gnb .gnbTab li:last-child { border: none; } 
  .gnb .gnbTab li a { width: 100%; color: #333; } 
  .gnb .userHead { display: none; } 
